fix css overflow bug mobile

--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,5 +1,5 @@
 .card {
-  @apply relative rounded;
+  @apply relative overflow-x-hidden rounded;
   min-height: 12rem;
 }
 .card--expanded {
